2010-04-14  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* plugin.cpp:
	* harness.cpp:
	* netscape.cpp:
	* shocker.cpp:
	* netscape.cpp:
	* image-capture.cpp:
	* shutdown-manager.cpp: Add the pid to all printfs, to make output less
	confusing when there are multiple processes involved.

2010-04-15  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* input.cpp|h:
	* plugin.cpp|h:
	* shocker.cpp|h:
	* logging.cpp|h:
	* browser.cpp|h:
	* harness.cpp|h:
	* netscape.cpp|h:
	* image-capture.cpp|h:
	* shutdown-manager.cpp|h: Add missing licenses and unify all of them.

2010-04-15  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* shutdown-manager.cpp|h: Add another p/invokable signature. Send Alt-F4 too
	when trying to shut down, since ctrl+q won't work with oob apps.

2010-04-15  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* plugin.cpp: Chrome doesn't support !xembed.

2010-04-01  Alan McGovern  <amcgovern@novell.com>

	* harness.cpp: Use the correct listen port in the shocker
	  harness.

2010-03-31  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* image-capture.cpp:
	* logging.cpp:
	* harness.cpp|h: The harness now sends a 4-byte header with the size of the
	data it is sending. Change harness_send_message to allocate the memory instead
	of reading into a pre-allocated buffer.

2010-03-31  Jeffrey Stedfast  <fejj@novell.com>

	* harness.cpp (send_all): New convenience function.
	(recv_all): Same.
	(send_harness_message): Use the new convenience functions to
	send/recv all requested data.

2010-03-31  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* shocker.cpp:
	* logging.cpp|h: Implement GetPlatformVersion and GetPlatformName.

2010-03-31  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* logging.cpp: Fix warnings.

2010-03-30  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* shocker.cpp: CompareImages take 5 arguments, not 6.

2010-03-30  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* shocker.cpp:
	* logging.cpp|h: Added p/invokable TestHost_GetTestDirectory.
